Make tests compatible with jdk 8 (#51)
* Make tests compatible with jdk 8

* Remove unnecessary exceptions